Fix layout params.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,40 +21,40 @@
         android:paddingLeft="8dp"
         android:paddingRight="8dp"
         android:layout_weight="2"
-        android:gravity="center">
+        android:gravity="center_horizontal|bottom">
 
         <ImageButton
             android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:id="@+id/button_sound_09"
-            android:scaleType="fitCenter"
+            android:scaleType="fitEnd"
             android:background="@null"
             android:layout_weight="1"
             android:adjustViewBounds="true" />
 
         <ImageButton
             android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:id="@+id/button_sound_10"
-            android:scaleType="fitCenter"
+            android:scaleType="fitEnd"
             android:background="@null"
             android:layout_weight="1"
             android:adjustViewBounds="true" />
 
         <ImageButton
             android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:id="@+id/button_sound_11"
-            android:scaleType="fitCenter"
+            android:scaleType="fitEnd"
             android:background="@null"
             android:layout_weight="1"
             android:adjustViewBounds="true" />
 
         <ImageButton
             android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:id="@+id/button_sound_12"
-            android:scaleType="fitCenter"
+            android:scaleType="fitEnd"
             android:background="@null"
             android:layout_weight="1"
             android:adjustViewBounds="true" />
@@ -71,7 +71,7 @@
 
         <ImageButton
             android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:id="@+id/button_sound_05"
             android:scaleType="fitCenter"
             android:background="@null"
@@ -80,7 +80,7 @@
 
         <ImageButton
             android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:id="@+id/button_sound_06"
             android:scaleType="fitCenter"
             android:background="@null"
@@ -88,7 +88,7 @@
 
         <ImageButton
             android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:id="@+id/button_sound_07"
             android:scaleType="fitCenter"
             android:background="@null"
@@ -97,7 +97,7 @@
 
         <ImageButton
             android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:id="@+id/button_sound_08"
             android:scaleType="fitCenter"
             android:background="@null"
@@ -109,43 +109,43 @@
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:gravity="center"
+        android:gravity="center_horizontal|top"
         android:paddingLeft="8dp"
         android:paddingRight="8dp"
         android:layout_weight="2">
 
         <ImageButton
             android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:id="@+id/button_sound_01"
-            android:scaleType="fitCenter"
+            android:scaleType="fitStart"
             android:background="@null"
             android:layout_weight="1"
             android:adjustViewBounds="true" />
 
         <ImageButton
             android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:id="@+id/button_sound_02"
-            android:scaleType="fitCenter"
+            android:scaleType="fitStart"
             android:background="@null"
             android:layout_weight="1"
             android:adjustViewBounds="true" />
 
         <ImageButton
             android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:id="@+id/button_sound_03"
-            android:scaleType="fitCenter"
+            android:scaleType="fitStart"
             android:background="@null"
             android:layout_weight="1"
             android:adjustViewBounds="true" />
 
         <ImageButton
             android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:id="@+id/button_sound_04"
-            android:scaleType="fitCenter"
+            android:scaleType="fitStart"
             android:background="@null"
             android:layout_weight="1"
             android:adjustViewBounds="true" />
